[gd_scene load_steps=6 format=3 uid="uid://cetxhn28rjqci"]

[ext_resource type="Script" path="res://scripts/titleControl.gd" id="1_4mjwp"]
[ext_resource type="Script" path="res://scripts/multimanager.gd" id="1_r34jh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_bq06g"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_odp4i"]
sky_material = SubResource("ProceduralSkyMaterial_bq06g")

[sub_resource type="Environment" id="Environment_76hwl"]
background_mode = 2
sky = SubResource("Sky_odp4i")
tonemap_mode = 2
glow_enabled = true

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_76hwl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mjwp")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Control/CenterContainer"]
layout_mode = 2
use_hidden_tabs_for_min_size = true

[node name="Join" type="VBoxContainer" parent="Control/CenterContainer/TabContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/TabContainer/Join"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CenterContainer/TabContainer/Join/HBoxContainer"]
layout_mode = 2
text = "Character:"

[node name="OptionButton" type="OptionButton" parent="Control/CenterContainer/TabContainer/Join/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Random"
popup/item_0/id = 2
popup/item_1/text = "Clarence"
popup/item_1/id = 0
popup/item_2/text = "Epsilon"
popup/item_2/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/CenterContainer/TabContainer/Join"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CenterContainer/TabContainer/Join/HBoxContainer2"]
layout_mode = 2
text = "Address:"

[node name="LineEdit" type="LineEdit" parent="Control/CenterContainer/TabContainer/Join/HBoxContainer2"]
custom_minimum_size = Vector2(80, 1.45519e-11)
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="SpinBox" type="SpinBox" parent="Control/CenterContainer/TabContainer/Join/HBoxContainer2"]
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 8989.0
rounded = true

[node name="join" type="Button" parent="Control/CenterContainer/TabContainer/Join"]
layout_mode = 2
size_flags_vertical = 3
text = "Join"

[node name="Host" type="VBoxContainer" parent="Control/CenterContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/TabContainer/Host"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CenterContainer/TabContainer/Host/HBoxContainer"]
layout_mode = 2
text = "Port:"

[node name="SpinBox" type="SpinBox" parent="Control/CenterContainer/TabContainer/Host/HBoxContainer"]
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 8989.0
rounded = true

[node name="host" type="Button" parent="Control/CenterContainer/TabContainer/Host"]
layout_mode = 2
text = "Host"

[node name="MultiManager" type="Node" parent="."]
script = ExtResource("1_r34jh")

[connection signal="pressed" from="Control/CenterContainer/TabContainer/Join/join" to="Control" method="_on_join_pressed"]
[connection signal="pressed" from="Control/CenterContainer/TabContainer/Host/host" to="Control" method="_on_host_pressed"]
